# online_judge

./: .gitignore  CMakeLists.txt  README.md
leetcode/: 0001_robot_with_string_2434.cpp  0002_robot_with_string_2434.cpp  0003_robot_with_string_2434.java  0004_robot_with_string_2434.go  0005_robot_with_string_2434.kt  0006_robot_with_string_2434.py  0007_sntp_136.cpp  0008_sntp_136.go  0009_sntp_136.java  0010_sntp_136.kt  0011_sntp_136.py  0012_cheapest_way_2.cpp  0013_cheapest_way_2.go  0014_cheapest_way_2.java  0015_cheapest_way_2.kt  0016_cheapest_way_2.py  0017_speleologist_way_15.cpp  0018_speleologist_way_15.go  0019_speleologist_way_15.java  0020_speleologist_way_15.kt  0021_speleologist_way_15.py  1_robot_with_string_2434.java  Makefile
leetcode/cpp/: 1_robot_with_string_2434.cpp  1_robot_with_string_2434_2.cpp  Makefile
lib/: algo.cpp  list.cpp  map.cpp  pair.cpp  string.cpp  unordered_map.cpp  vector.cpp
lib/test/: pair.cpp  string.cpp  vector.cpp
scripts/: prepare_lib.sh  prepare_solution.sh  test.pl
tasks/632A/src/: 632A.cpp
tasks/ADDREV/src/: main.c
tasks/FCTRL/src/: main.c
tasks/JULKA/src/: JULKA.cpp  main.c
tasks/JULKA/test/: 01.in  01.out
tasks/MAXWOODS/src/: main.c
tasks/MAXWOODS/test/: 02.in
tasks/ONP/src/: main.c
tasks/PALIN/src/: main.c
tasks/PALIN/test/: 02.in  02.out
tasks/PRIME1/src/: main.c
tasks/SBANK/src/: main.c
tasks/SBANK/test/: 01.in
tasks/TEST/src/: main.c
tasks/TEST/test/: 01.in  03.in  03.out
tasks/alternate_603A/src/: alternate_603A.cpp
tasks/approx_602/src/: approx_602.cpp
tasks/approx_602B/src/: approx_602B.cpp
tasks/art_416B/src/: art_416B.cpp
tasks/ball_489B/src/: ball_489B.cpp
tasks/bear_573B/src/: bear_573B.cpp
tasks/boredom_455A/src/: boredom_455A.cpp
tasks/bwcubes_323A/src/: bwcubes_323A.cpp
tasks/bwcubes_323A/test/: 02.out
tasks/chain_607A/src/: chain_607A.cpp
tasks/color_graph_505B/src/: color_graph_505B.cpp
tasks/color_the_fence_349B/src/: color_the_fence_349B.cpp
tasks/covered_534B/src/: covered_534B.cpp
tasks/dancing_322A/src/: dancing_322A.cpp
tasks/domino_611C/src/: domino_611C.cpp
tasks/eight_550C/src/: eight_550C.cpp
tasks/exponent_691C/src/: exponent_691C.cpp
tasks/fashion_691A/src/: fashion_691A.cpp
tasks/fence_363B/src/: fence_363B.cpp
tasks/flipping_327A/src/: flipping_327A.cpp
tasks/flowers_322B/src/: flowers_322B.cpp
tasks/flowers_474D/src/: flowers_474D.cpp
tasks/games_325B/src/: games_325B.cpp
tasks/geometric_567C/src/: geometric_567C.cpp
tasks/george_467C/src/: george_467C.cpp
tasks/given_489C/src/: given_489C.cpp
tasks/grandma_632A/src/: grandma_632A.cpp
tasks/hungry_327B/src/: hungry_327B.cpp
tasks/hungry_327B/test/: 01.out  02.out
tasks/ice_sheldon_328B/src/: ice_sheldon_328B.cpp
tasks/increase_702A/src/: increase_702A.cpp
tasks/inna_choose_400A/src/: inna_choose_400A.cpp
tasks/joysticks_651A/src/: joysticks_651A.cpp
tasks/k_tree_431C/src/: k_tree_431C.cpp
tasks/kyoya_553A/src/: kyoya_553A.cpp
tasks/m_ring_855B/src/: m_ring_855B.cpp
tasks/m_ring_855B/test/: 03.in  03.out
tasks/mashmokh_414B/src/: mashmokh_414B.cpp
tasks/photo_522B/src/: photo_522B.cpp
tasks/photo_522B/test/: 01.out
tasks/polo_289B/src/: polo_289B.cpp
tasks/puzzles_337A/src/: puzzles_337A.cpp
tasks/quasi_binary_538B/src/: quasi_binary_538B.cpp
tasks/quasi_binary_538B/test/: 02.out
tasks/queries_313B/src/: queries_313B.cpp
tasks/reposts_522A/src/: reposts_522A.cpp
tasks/ribbon_cut_189A/src/: ribbon_cut_189A.cpp
tasks/s_palindrome_691B/src/: s_palindrome_691B.cpp
tasks/sequences_446A/src/: sequences_446A.cpp
tasks/sereja_368B/src/: sereja_368B.cpp
tasks/skateboard_628B/src/: skateboard_628B.cpp
tasks/soldiers_546D/src/: soldiers_546D.cpp
tasks/steps_580A/src/: steps_580A.cpp
(+15 files in other folders)
